@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure — Query and stream telemetry

class TelemetryController {
  +GetRange(deviceId: string, metric: string, from: string, to: string): Task<ActionResult>
  +GetLatest(): Task<ActionResult>
}

class TelemetryQueryValidator {
  +ValidateRange(deviceId: string, metric: string, from: string, to: string): RangeValidation
  +ValidateSeries(deviceId: string, metric: string, errors): void
}

class CouchbaseConnection {
  +GetClusterAsync(): Task<ICluster>
}

class CouchbaseTelemetryReader {
  +ReadRangeAsync(query: RangeQuery, token: CancellationToken): Task~IReadOnlyList~SeriesPointDto~~
  +ReadLatestAsync(token: CancellationToken): Task~IReadOnlyList~TelemetryPointDto~~
}

class RangeQuery <<record>> {
  +string DeviceId
  +string Metric
  +DateTimeOffset From
  +DateTimeOffset To
}

class SeriesPointDto <<record>> {
  +DateTimeOffset Timestamp
  +double Value
}

class TelemetryPointDto <<record>> {
  +string DeviceId
  +string Metric
  +double Value
  +DateTimeOffset Timestamp
}

class TelemetryHub <<Hub>> {
}

class RedisLiveStream <<BackgroundService>> {
  +ExecuteAsync(token: CancellationToken): Task
  -DeliverAsync(payload: RedisValue, token: CancellationToken): Task
}

TelemetryController ..> TelemetryQueryValidator : validates with
TelemetryController ..> CouchbaseTelemetryReader : queries through
CouchbaseTelemetryReader ..> CouchbaseConnection : connects through
CouchbaseTelemetryReader ..> RangeQuery : accepts
CouchbaseTelemetryReader ..> SeriesPointDto : returns
CouchbaseTelemetryReader ..> TelemetryPointDto : returns
RedisLiveStream ..> TelemetryHub : broadcasts via IHubContext
RedisLiveStream ..> TelemetryPointDto : delivers

note bottom of TelemetryHub
  Deliberately empty: clients receive "telemetry"
  messages without any subscription operations or
  server-side series groups.
end note

note bottom of RedisLiveStream
  Subscribes to the Redis pub/sub channel "telemetry"
  (camelCase JSON points published by the worker) and
  broadcasts to every client of this API instance.
end note
@enduml
